--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,16 @@
   "lang": {
     "home":"heim",
     "my_dashbaord":"mein Armaturenbrett",
+    "dashboard": "Dashboard",
+    "accounts": "Konten",
+    "team": "Team",
+    "administration": "Verwaltung",
+    "new_chart": "neue Grafik",
+    "analytics": "Analytik",
+    "reinsurance": "Rückversicherung",
     "tickets": "Tickets",
-    "no_of_tickets": "Anzahl der Tickets"
+    "no_of_tickets": "Anzahl der Tickets",
+    "view_all": "ALLE ANSEHEN",
+    "summary" : "Zusammenfassung"
   }
 }
