--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -12,6 +12,8 @@
     "reinsurance": "Bima ya kurejesha",
     "no_of_tickets": "Idadi ya Tiketi",
     "view_all": "ANGALIA YOTE",
-    "summary" : "Muhtasari"
+    "summary" : "Muhtasari",
+    "my_policies": "Sera Zangu",
+    "my_quotations": "Nukuu Zangu"
   }
 }
