VQ-726 | Ability to Provide Clients with Quick Insurance Quotes on a Single Screen

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
     "view_all": "VIEW ALL",
     "summary" : "Summary",
     "my_policies": "My Policies",
-    "my_quotations": "My Quotations"
+    "my_quotations": "My Quotations",
+    "quotation": "Quotation"
   }
 }
