Create Quick Quote and Quotation(Data Entry)

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -14,6 +14,7 @@
     "view_all": "查看全部",
     "summary" : "概括",
     "my_policies": "我的保单",
-    "my_quotations": "我的报价"
+    "my_quotations": "我的报价",
+    "quotation": "报价"
   }
 }
