--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -14,6 +14,8 @@
     "view_all": "ALLE ANSEHEN",
     "summary" : "Zusammenfassung",
     "my_policies": "Meine Richtlinien",
-    "my_quotations": "Meine Angebote"
+    "my_quotations": "Meine Angebote",
+    "quotation": "Angebot"
+
   }
 }
