--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,9 @@
     "view_all": "VER TODO",
     "summary": "resumen",
     "my_policies": "Mis Pólizas",
-    "my_quotations": "Mis Cotizaciones"
+    "my_quotations": "Mis Cotizaciones",
+    "quotation": "Cotización"
+
 
 }
 }
