--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -14,6 +14,8 @@
     "view_all": "ANGALIA YOTE",
     "summary" : "Muhtasari",
     "my_policies": "Sera Zangu",
-    "my_quotations": "Nukuu Zangu"
+    "my_quotations": "Nukuu Zangu",
+    "quotation": "nukuu"
+
   }
 }
