Changed new chart to new report

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,7 +6,7 @@
     "accounts": "Konten",
     "team": "Team",
     "administration": "Verwaltung",
-    "new_chart": "neue Grafik",
+    "new_report": "neue Grafik",
     "analytics": "Analytik",
     "reinsurance": "Rückversicherung",
     "tickets": "Tickets",
