--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
     "tickets": "Tickets",
     "team": "Team",
     "administration": "Administration",
-    "new_chart": "new_chart",
+    "new_report": "new_report",
     "analytics": "Analytics",
     "reinsurance": "Tickets",
     "no_of_tickets": "No. of Tickets",
