--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,7 +7,7 @@
     "tickets": "Boletos",
     "team": "equipo",
     "administration": "administración",
-    "new_chart": "nuevo gráfico",
+    "new_report": "nuevo gráfico",
     "analytics": "analítica",
     "reinsurance": "reaseguro",
     "no_of_tickets": "Número de entradas",
