--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,7 @@
     "tickets": "billets",
     "team": "équipe",
     "administration": "administration",
-    "new_chart": "nouveau graphique",
+    "new_report": "nouveau graphique",
     "analytics": "analytique",
     "reinsurance": "réassurance",
     "no_of_tickets": "Nombre de billets",
