--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -7,7 +7,7 @@
     "tickets": "Tiketi",
     "team": "Timu",
     "administration": "Utawala",
-    "new_chart": "grafu_mpya",
+    "new_report": "grafu_mpya",
     "analytics": "Uchambuzi",
     "reinsurance": "Bima ya kurejesha",
     "no_of_tickets": "Idadi ya Tiketi",
