--- a/src/assets/i18n/ng.json
+++ b/src/assets/i18n/ng.json
@@ -6,7 +6,7 @@
     "accounts": "cuentas",
     "team": "equipo",
     "administration": "administración",
-    "new_chart": "nuevo gráfico",
+    "new_report": "nuevo gráfico",
     "analytics": "analítica",
     "reinsurance": "reaseguro",
     "tickets": "Tickets",
