handled routing for the list report component

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -7,7 +7,7 @@
     "tickets": "票务",
     "team": "团队",
     "administration": "管理",
-    "new_chart": "新图表",
+    "new_report": "新图表",
     "analytics": "分析",
     "reinsurance": "再保险",
     "no_of_tickets": "门票数量",
