VQ-933 | Underwriting Screen Development

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "accounts":"Accounts",
     "tickets": "Tickets",
     "team": "Team",
+    "policy": "Policy",
     "administration": "Administration",
     "new_chart": "new_chart",
     "analytics": "Analytics",
