--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,7 @@
 {
-  "lang": {
+  "admin": {},
+  "auth": {},
+  "base": {
     "home":"heim",
     "my_dashbaord":"mein Armaturenbrett",
     "dashboard": "Dashboard",
@@ -16,6 +18,146 @@
     "my_policies": "Meine Richtlinien",
     "my_quotations": "Meine Angebote",
     "quotation": "Angebot"
-
-  }
+  },
+  "crm": {},
+  "entities": {
+    "account_number": "Accountnummer",
+    "account_type": "Konto Typ",
+    "actions": "Aktionen",
+    "assign_role": "Rolle zuweisen",
+    "bank": "Bank",
+    "banking_details": "Bankdaten",
+    "branch": "Zweig",
+    "business_accounts": "Geschäftskonten",
+    "business_unit": "Geschäftsbereich",
+    "category": "Kategorie",
+    "category_required": "Kategorie ist erforderlich",
+    "cert_reg_no": "Zertifikats-Reg.-Nr",
+    "citizenship": "Staatsbürgerschaft",
+    "client": "Klient",
+    "client_type": "Clienttyp",
+    "contact_details": "Kontaktdetails",
+    "corporate": "Unternehmen",
+    "country": "Land",
+    "country_of_inc": "Land der Gründung",
+    "county": "Bezirk",
+    "currency": "Währung",
+    "distribute_channel": "Kanal verteilen",
+    "divorced": "Geschieden",
+    "dob": "Geburtsdatum",
+    "document": "dokumentieren",
+    "e_docs": "E-Dokumente",
+    "economic_sector": "Ökonomischer Sektor",
+    "edit": "bearbeiten",
+    "email": "Email",
+    "employed": "Beschäftigt",
+    "entities": "Entitäten",
+    "entity": "juristische Person",
+    "entity_type": "Entitätstyp",
+    "female": "weiblich",
+    "filter": "Filter",
+    "format": "Format",
+    "gender": "Geschlecht",
+    "group": "Gruppe",
+    "house_name": "Hausname/Nr",
+    "iban": "IBAN",
+    "id_number": "ID-Nummer",
+    "id_type": "ID-Typ",
+    "identifier": "Identifikator",
+    "identity": "Identität",
+    "import_account": "Konto importieren",
+    "import_client": "Client importieren",
+    "import_service_provider": "Importdienstleister",
+    "import_users": "Benutzer importieren",
+    "individual": "Individuell",
+    "male": "männlich",
+    "maried": "Verheiratet",
+    "marital_status": "Familienstand",
+    "mobile_money": "Mobiles Geld",
+    "Monthly": "Monatlich",
+    "mpay_no": "MPay-Nr",
+    "name": "Name",
+    "nb_consented": "NB: Bei Zustimmung zu E-Dokumenten",
+    "new": "Neu",
+    "new_account": "Neues Konto",
+    "new_client": "Neuer Kunde",
+    "new_entity": "Neue Entität",
+    "new_service_provider": "Neuer Dienstleister",
+    "next": "nächste",
+    "no": "NEIN",
+    "no_agent_found": "Kein Agent gefunden",
+    "no_service_provider_found": "Kein Dienstanbieter gefunden",
+    "note": "Notiz",
+    "occupation": "Beruf",
+    "optional": "Optional",
+    "other_name": "anderer Name",
+    "others": "Andere",
+    "parent_company": "Muttergesellschaft",
+    "party_type": "Partytyp",
+    "physical_address": "Physikalische Adresse",
+    "pin_number": "PIN Nummer",
+    "po_box": "Postfach ",
+    "postal_address_details": "Angaben zur Postanschrift",
+    "preferred_channel": "Bevorzugter Kanal",
+    "preferred_contact_channel": "Bevorzugter Kontaktkanal",
+    "premium_frequency": "Premium-Frequenz",
+    "primary": "primär",
+    "primary_id_type": "Primärer ID-Typ",
+    "profile_photo": "Profilfoto",
+    "purpose_of_insurance": "Zweck der Versicherung",
+    "reg_date": "Registrierungsdatum",
+    "reg_name": "Registrierungsname",
+    "required": "erforderlich",
+    "residential_address_details": "Angaben zur Wohnadresse",
+    "road": "Straße",
+    "roles": "Rollen",
+    "save": "Speichern",
+    "select": "Wählen",
+    "select_channel": "Wählen Sie Kanal",
+    "select_citizenship": "Wählen Sie Staatsbürgerschaft",
+    "select_currency": "Währung wählen",
+    "select_employment": "Wählen Sie Beschäftigung aus",
+    "select_marital_status": "Wählen Sie Familienstand",
+    "select_occupation": "Wählen Sie Beruf aus",
+    "select_role": "Rolle auswählen",
+    "select_sector": "Wählen Sie Sektor aus",
+    "self_employed": "Selbstständig",
+    "seperated": "Getrennt",
+    "service_provider": "Dienstleister",
+    "single": "Einzel",
+    "sms": "SMS",
+    "sms_number": "SMS-Nummer",
+    "source_of_funds": "Herkunft der Mittel",
+    "staff": "Personal",
+    "status": "Status",
+    "surname": "Nachname",
+    "tel_number": "Telefonnummer",
+    "title": "Titel",
+    "town": "Stadt",
+    "trade_name": "Handelsname",
+    "type": "Typ",
+    "type_of_employment": "Art der Anstellung",
+    "upload_image": "Bild hochladen",
+    "upload_utility_bill": "Laden Sie die Stromrechnung hoch",
+    "user": "Benutzer",
+    "user_type": "Benutzertyp",
+    "users": "Benutzer",
+    "utility_bill": "Strom-und Gasrechnung",
+    "view": "Sicht",
+    "wealth_aml_details": "Details zur Vermögensbekämpfung",
+    "weekly": "Wöchentlich",
+    "widowed": "Verwitwet",
+    "with_effect_from": "Mit Wirkung ab",
+    "with_effect_to": "Mit Wirkung auf",
+    "yes": "Ja"
+  },
+  "gis": {},
+  "lms": {
+      "common": {},
+      "ind": {},
+      "grp": {}
+  },
+  "reports": {
+  },
+  "setups": {}
 }
