--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,21 +1,164 @@
 {
-  "lang": {
-    "home":"home",
-    "my_dashbaord":"my dashboard",
-    "dashboard":"dashboard",
-    "accounts":"Accounts",
-    "tickets": "Tickets",
-    "team": "Team",
-    "policy": "Policy",
-    "administration": "Administration",
-    "new_report": "new_report",
-    "analytics": "Analytics",
-    "reinsurance": "Tickets",
-    "no_of_tickets": "No. of Tickets",
-    "view_all": "VIEW ALL",
-    "summary" : "Summary",
-    "my_policies": "My Policies",
-    "my_quotations": "My Quotations",
-    "quotation": "Quotation"
-  }
+    "admin": {},
+    "auth": {},
+    "base": {
+        "home":"home",
+        "my_dashbaord":"my dashboard",
+        "dashboard":"dashboard",
+        "accounts":"Accounts",
+        "tickets": "Tickets",
+        "team": "Team",
+        "policy": "Policy",
+        "administration": "Administration",
+        "new_report": "new_report",
+        "analytics": "Analytics",
+        "reinsurance": "Tickets",
+        "no_of_tickets": "No. of Tickets",
+        "view_all": "VIEW ALL",
+        "summary" : "Summary",
+        "my_policies": "My Policies",
+        "my_quotations": "My Quotations",
+        "quotation": "Quotation"
+    },
+    "crm": {},
+    "entities": {
+        "account_number": "Account Number",
+        "account_type": "Account Type",
+        "actions": "Actions",
+        "assign_role": "assign role",
+        "bank": "Bank",
+        "banking_details": "Banking Details",
+        "branch": "Branch",
+        "business_accounts": "Business Accounts",
+        "business_unit": "Business Unit",
+        "category": "Category",
+        "category_required": "Category is required",
+        "cert_reg_no": "Cert Reg No",
+        "citizenship": "Citizenship",
+        "client": "Client",
+        "client_type": "Client Type",
+        "contact_details": "contact details",
+        "corporate": "corporate",
+        "country": "country",
+        "country_of_inc": "Country of Incorporation",
+        "county": "county",
+        "currency": "Currency",
+        "distribute_channel": "Distribute Channel",
+        "divorced": "Divorced",
+        "dob": "date of birth",
+        "document": "document",
+        "e_docs": "E Docs",
+        "economic_sector": "Economic Sector",
+        "edit": "edit",
+        "email": "Email",
+        "employed": "Employed",
+        "entities": "entities",
+        "entity": "entity",
+        "entity_type": "Entity Type",
+        "female": "female",
+        "filter": "Filter",
+        "format": "format",
+        "gender": "gender",
+        "group": "Group",
+        "house_name": "House Name/No",
+        "iban": "IBAN",
+        "id_number": "ID Number",
+        "id_type": "ID Type",
+        "identifier": "identifier",
+        "identity": "identity",
+        "import_account": "Import Account",
+        "import_service_provider": "Import Service Provider",
+        "import_users": "Import Users",
+        "individual": "individual",
+        "male": "male",
+        "maried": "Married",
+        "marital_status": "Marital Status",
+        "mobile_money": "Mobile Money",
+        "Monthly": "Monthly",
+        "mpay_no": "MPay No",
+        "name": "Name",
+        "new": "New",
+        "new_account": "New Account",
+        "nb_consented": "NB: If consented to E-documents",
+        "new_client": "New Client",
+        "new_entity": "New Entity",
+        "new_service_provider": "New Service Provider",
+        "next": "next",
+        "no": "No",
+        "no_agent_found": "No Agent Found",
+        "no_service_provider_found": "No Service Provider Found",
+        "note": "note",
+        "occupation": "Occupation",
+        "optional": "optional",
+        "other_name": "other name",
+        "others": "others",
+        "parent_company": "Parent Company",
+        "party_type": "party type",
+        "physical_address": "Physical Address",
+        "pin_number": "PIN Number",
+        "po_box": "P.O. Box",
+        "postal_address_details": "Postal Address details",
+        "preferred_channel": "Preferred Channel",
+        "preferred_contact_channel": "Preferred contact channel",
+        "premium_frequency": "Premium Frequency",
+        "primary": "primary",
+        "primary_id_type": "Primary ID Type",
+        "profile_photo": "profile photo",
+        "purpose_of_insurance": "Purpose of Insurance",
+        "reg_date": "Registration Date",
+        "reg_name": "Registration Name",
+        "required": "required",
+        "residential_address_details": "Residential Address details",
+        "road": "Road",
+        "roles": "roles",
+        "save": "Save",
+        "select": "Select",
+        "select_channel": "Select Channel",
+        "select_citizenship": "Select Citizenship",
+        "select_currency": "Select Currency",
+        "select_employment": "Select Employment",
+        "select_marital_status": "Select Marital Status",
+        "select_occupation": "Select Occupation",
+        "select_role": "select role",
+        "select_sector": "Select Sector",
+        "self_employed": "Self Employed",
+        "seperated": "Seperated",
+        "service_provider": "Service Provider",
+        "single": "Single",
+        "sms": "SMS",
+        "sms_number": "SMS Number",
+        "source_of_funds": "Source of Funds",
+        "staff": "Staff",
+        "status": "Status",
+        "surname": "surname",
+        "tel_number": "Telephone Number",
+        "title": "Title",
+        "town": "Town",
+        "trade_name": "Trade Name",
+        "type": "type",
+        "type_of_employment": "Type of Employment",
+        "upload_image": "upload image",
+        "upload_utility_bill": "Upload Utitlity Bill",
+        "utility_bill": "Utitlity Bill",
+        "user": "user",
+        "users": "Users",
+        "user_type": "User Type",
+        "wealth_aml_details": "Wealth AML details",
+        "weekly": "Weekly",
+        "widowed": "Widowed",
+        "with_effect_from": "With Effect From",
+        "with_effect_to": "With Effect To",
+        "yes": "Yes",
+        "import_client": "Import Client",
+        "view": "View"
+    },
+    "gis": {},
+    "lms": {
+        "common": {},
+        "ind": {},
+        "grp": {}
+    },
+    "reports": {
+    },
+    "setups": {}
 }
