--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,7 @@
 {
-  "lang": {
+  "admin": {},
+  "auth": {},
+  "base": {
     "home":"maison",
     "my_dashbaord":"Mon tableau de bord",
     "dashboard": "tableau de bord",
@@ -16,6 +18,16 @@
     "my_policies": "Mes Polices",
     "my_quotations": "Mes Devis",
     "quotation": "citation"
-
-  }
+  },
+  "crm": {},
+  "entities": {},
+  "gis": {},
+  "lms": {
+      "common": {},
+      "ind": {},
+      "grp": {}
+  },
+  "reports": {
+  },
+  "setups": {}
 }
