--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1,5 +1,7 @@
 {
-  "lang": {
+  "admin": {},
+  "auth": {},
+  "base": {
     "home":"nyumbani",
     "my_dashbaord":"dashibodi yangu",
     "dashboard": "dashibodi",
@@ -16,6 +18,16 @@
     "my_policies": "Sera Zangu",
     "my_quotations": "Nukuu Zangu",
     "quotation": "nukuu"
-
-  }
+  },
+  "crm": {},
+  "entities": {},
+  "gis": {},
+  "lms": {
+      "common": {},
+      "ind": {},
+      "grp": {}
+  },
+  "reports": {
+  },
+  "setups": {}
 }
