VQ-1248: implemented i18n for entity-creation screens

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,28 +37,29 @@
         "citizenship": "Citizenship",
         "client": "Client",
         "client_type": "Client Type",
-        "contact_details": "contact details",
-        "corporate": "corporate",
-        "country": "country",
+        "contact_details": "Contact Details",
+        "corporate": "Corporate",
+        "country": "Country",
         "country_of_inc": "Country of Incorporation",
-        "county": "county",
+        "county": "County",
         "currency": "Currency",
         "distribute_channel": "Distribute Channel",
         "divorced": "Divorced",
-        "dob": "date of birth",
+        "dob": "Date of Birth",
         "document": "document",
         "e_docs": "E Docs",
         "economic_sector": "Economic Sector",
         "edit": "edit",
         "email": "Email",
+        "email_address": "Email Address",
         "employed": "Employed",
         "entities": "entities",
         "entity": "entity",
         "entity_type": "Entity Type",
-        "female": "female",
+        "female": "Female",
         "filter": "Filter",
         "format": "format",
-        "gender": "gender",
+        "gender": "Gender",
         "group": "Group",
         "house_name": "House Name/No",
         "iban": "IBAN",
@@ -69,8 +70,8 @@
         "import_account": "Import Account",
         "import_service_provider": "Import Service Provider",
         "import_users": "Import Users",
-        "individual": "individual",
-        "male": "male",
+        "individual": "Individual",
+        "male": "Male",
         "maried": "Married",
         "marital_status": "Marital Status",
         "mobile_money": "Mobile Money",
@@ -89,11 +90,11 @@
         "no_service_provider_found": "No Service Provider Found",
         "note": "note",
         "occupation": "Occupation",
-        "optional": "optional",
-        "other_name": "other name",
-        "others": "others",
+        "optional": "Optional",
+        "other_name": "Other Name",
+        "others": "Others",
         "parent_company": "Parent Company",
-        "party_type": "party type",
+        "party_type": "Party Type",
         "physical_address": "Physical Address",
         "pin_number": "PIN Number",
         "po_box": "P.O. Box",
@@ -130,12 +131,12 @@
         "source_of_funds": "Source of Funds",
         "staff": "Staff",
         "status": "Status",
-        "surname": "surname",
+        "surname": "Surname",
         "tel_number": "Telephone Number",
         "title": "Title",
         "town": "Town",
         "trade_name": "Trade Name",
-        "type": "type",
+        "type": "Type",
         "type_of_employment": "Type of Employment",
         "upload_image": "upload image",
         "upload_utility_bill": "Upload Utitlity Bill",
@@ -150,7 +151,118 @@
         "with_effect_to": "With Effect To",
         "yes": "Yes",
         "import_client": "Import Client",
-        "view": "View"
+        "view": "View",
+        "personal_info": "Personal Information",
+        "additional_info": "Additional Information",
+        "full_names": "Full Names",
+        "passport_number": "Passport Number",
+        "mobile_number": "Mobile Number",
+        "department": "Department",
+        "supervisor": "Supervisor",
+        "complete": "Complete",
+        "information": "Information",
+        "bank_details": "Bank Details",
+        "wealth_details": "Wealth Details",
+        "aml_details": "AML Details",
+        "organisation": "Organisation",
+        "next_of_kins": "Next of Kins",
+        "select_account_type": "Select Account Type",
+        "preferred_payment_account": "Preferred Payment Account",
+        "short_codes": "Short Codes",
+        "nationality": "Nationality",
+        "sector": "Sector",
+        "trading_names": "Trading Names",
+        "source_of_wealth": "Source of Wealth",
+        "cert_reg_year": "Cert Reg Year",
+        "parent_country": "Parent Country",
+        "operation_country": "Operation Country",
+        "add": "Add",
+        "share": "Share",
+        "identity_type": "Identity Type",
+        "identifier_no": "Identifier No",
+        "relation": "Relation",
+        "mobile": "mobile",
+        "no_next_of_kin_found": "No Next of Kin found",
+        "add_next_of_kin": "Add Next of Kin",
+        "id": "ID",
+        "cancel": "Cancel",
+        "assign_supervisor": "Assign Supervisor",
+        "no_users_found": "No users found",
+        "new_business_account": "New Business Account",
+        "prime_identity": "Prime Identity",
+        "account_type_required": "Account type is required",
+        "identity_type_required": "Identity type is required",
+        "citizenship_required": "Citizenship is required",
+        "surname_required": "Surname is required",
+        "other_name_required": "Other name is required",
+        "corporate_details_here": "Coporate Details Here",
+        "id_number_required": "ID Number is required",
+        "pin_number_required": "PIN Number is required",
+        "gender_required": "Gender is required",
+        "select_gender": "Select Gender",
+        "title_required": "Title is required",
+        "country_code_required": "Country Code is required",
+        "sms_required": "SMS is required",
+        "sms_number_format": "SMS number format",
+        "select_title": "Select Title",
+        "tel_number_required": "Tel Number is required",
+        "tel_number_format": "Tel Number Format",
+        "select_option": "Select Option",
+        "e_doc_required": "E-Doc is required",
+        "nb": "NB",
+        "if_consented_to_e_docs": "If consented to E-document",
+        "select_document": "Select Document",
+        "country_required": "Country is required",
+        "county_required": "County is required",
+        "po_box_required": "P.O. Box is required",
+        "town_required": "Town is required",
+        "road_required": "Road is required",
+        "house_name_required": "House Name/No is required",
+        "utility_bill_required": "Utility Bill is required",
+        "upload_utility_bill_required": "Upload Utility Bill is required",
+        "bank_required": "Bank is required",
+        "branch_required": "Branch is required",
+        "account_number_required": "Account Number is required",
+        "currency_required": "Currency is required",
+        "with_effect_from_required": "With Effect From is required",
+        "with_effect_to_required": "With Effect To is required",
+        "mpay_no_required": "MPay Number is required",
+        "iban_required": "IBAN is required",
+        "preferred_channel_required": "Preferred Channel is required",
+        "marital_status_required": "Marital Status is required",
+        "source_of_funds_required": "Source of Funds is required",
+        "type_of_employment_required": "Type of Employment is required",
+        "economic_sector_required": "Economic Sector is required",
+        "purpose_of_insurance_required": "Purpose of Insurance is required",
+        "premium_frequency_required": "Premium Frequency is required",
+        "distribute_channel_required": "Distrubed Channel is required",
+        "other_details": "Other Details",
+        "credit_allowed": "Credit Allowed",
+        "credit_allowed_required": "Credit Allowed is required",
+        "credit_limit": "Credit Limit",
+        "credit_limit_required": "Credit Limit is required",
+        "vat_applicable": "VAT Applicable",
+        "vat_applicable_required": "VAT Applicable is required",
+        "withholding_tax": "Withholding Tax",
+        "withholding_tax_required": "Withholding Tax is required",
+        "withholding_tax_applicable": "Withholding Tax Applicable",
+        "withholding_tax_applicable_required": "Withholding Tax Applicable required",
+        "provider_types": "Provider Types",
+        "provider_types_required": "Provider types required",
+        "first_name": "First Name",
+        "first_name_required": "First Name is required",
+        "country_of_inc_required": "Country of Incorporation is required",
+        "assign_manageable_apps": "Assign Manageable Apps",
+        "username": "Username",
+        "username_required": "Username required",
+        "city": "City",
+        "primary_phone_number": "Primary Phone Number",
+        "secondary_phone_number": "Secondary Phone Number",
+        "phone_number_required": "Phone Number is required",
+        "employment_details": "Employment Details",
+        "personnel_rank": "Personnel Rank",
+        "personnel_rank_required": "Personnel Rank is required",
+        "select_supervisor": "Select supervisor"
     },
     "gis": {},
     "lms": {
