VQ-1248: i18n implementation for auth journey

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,37 @@
 {
     "admin": {},
-    "auth": {},
+    "auth": {
+        "enhancing_business_performance": "Enhancing Business Performance",
+        "lead_text": "Maximize business opportunities, reduce costs and attain profitability by aligning IT with your Business through IT modernization and transformation.",
+        "login": "Login",
+        "enter_email_and_pass": "Enter your email address and password to access account.",
+        "email_address":"Email Address",
+        "forgot_password": "Forgot your password?",
+        "password": "Password",
+        "remember_me": "Remember me",
+        "verification": "Verification",
+        "verification_instruction": "Select which contact details we should send verification code.",
+        "via": "Via",
+        "otp": "One Time Password",
+        "otp_instruction": "A four digit verification has been sent to your",
+        "otp_required": "OTP value is required",
+        "verify": "Verify",
+        "resend_code": "Resend Code",
+        "forgot_password_instruction": "Enter your email address and registered phone number to verify your account.",
+        "email_invalid": "Email address is not valid",
+        "phone_number": "Phone Number",
+        "phone_number_required": "Phone Number is required",
+        "submit": "Submit",
+        "change_password": "Change Password",
+        "change_password_instruction": "Set your preferred password",
+        "new_password": "New Password",
+        "password_required": "Password is required",
+        "new_password_invalid": "Password must be at least 6 characters",
+        "confirm_password": "Confirm Password",
+        "confirm_password_required": "Confirm Password is required",
+        "passwords_must_match": "Passwords must match",
+        "save": "Save"
+    },
     "base": {
         "home":"home",
         "my_dashbaord":"my dashboard",
@@ -25,7 +56,7 @@
         "account_number": "Account Number",
         "account_type": "Account Type",
         "actions": "Actions",
-        "assign_role": "assign role",
+        "assign_role": "Assign Role",
         "bank": "Bank",
         "banking_details": "Banking Details",
         "branch": "Branch",
@@ -111,7 +142,7 @@
         "required": "required",
         "residential_address_details": "Residential Address details",
         "road": "Road",
-        "roles": "roles",
+        "roles": "Roles",
         "save": "Save",
         "select": "Select",
         "select_channel": "Select Channel",
@@ -262,7 +293,90 @@
         "employment_details": "Employment Details",
         "personnel_rank": "Personnel Rank",
         "personnel_rank_required": "Personnel Rank is required",
-        "select_supervisor": "Select supervisor"
+        "select_supervisor": "Select supervisor",
+        "overview": "Overview",
+        "transactions": "Transactions",
+        "reports": "Reports",
+        "manage_roles": "Manage Roles",
+        "profile": "Profile",
+        "client_information": "Client Information",
+        "location": "Location",
+        "phone_number": "Phone Number",
+        "customer_since": "Customer Since",
+        "tax_id": "Tax ID",
+        "basic_information": "Basic Information",
+        "entity_name": "Entity Name",
+        "party_id_type": "Party ID Type",
+        "more_information": "More Information",
+        "client_details": "Client Details",
+        "view_entity_details": "View Entity Details",
+        "claims": "Claims",
+        "view_claims": "View Claims",
+        "quotations": "Quotations",
+        "view_quotations": "View Quotations",
+        "payments": "Payments",
+        "view_payments": "View Payments",
+        "policies": "Policies",
+        "view_policies": "View Policies",
+        "related_accounts": "Related Accounts",
+        "view_related_accounts": "View Related Accounts",
+        "transactions_content": "Transactions Content",
+        "new_policy": "New Policy",
+        "new_quote": "New Quote",
+        "new_claim": "New Claim",
+        "client_account": "Client Account",
+        "contact": "Contact",
+        "statement_summary": "Statement Summary",
+        "policies_in_force": "Policies in Force",
+        "in_force_premium": "In-Force Premium",
+        "outstanding_premium": "Outstanding Premium",
+        "ltv": "LTV",
+        "unallocated_cash": "Unallocated Cash",
+        "view_full_report": "View Full Report",
+        "loss_ratio": "Loss Ratio",
+        "activities": "Activities",
+        "overdue": "Overdue",
+        "upcoming": "Upcoming",
+        "add_new": "Add New",
+        "products_performance": "Products Performance",
+        "recent_policies": "Recent Policies",
+        "view_all": "View All",
+        "policy_number": "Policy Number",
+        "product": "Product",
+        "cover_from": "Cover From",
+        "cover_to": "Cover To",
+        "premium": "Premium",
+        "no_policy_found": "No Policy Found",
+        "recent_quotations": "Recent Quotations",
+        "quotation_number": "Quotation Number",
+        "no_quotation_found": "No Quotation found",
+        "claim_tracking_insights": "Claim Tracking Insights",
+        "claim_number": "Claim Number",
+        "notification_date": "Notification Date",
+        "incurred_amount": "Incurred Amount",
+        "no_claim_found": "No Claim Found",
+        "reports_content": "Reports Content",
+        "help": "Help",
+        "from": "From",
+        "to": "To",
+        "employees": "Employees",
+        "module": "Module",
+        "total_amount": "Total Amount",
+        "no_employees_found": "No Employees Found",
+        "employee_name": "Employee Name",
+        "system": "System",
+        "transaction_type": "Transaction Type",
+        "all": "All",
+        "amount": "Amount",
+        "zero": "Zero",
+        "credit": "Credit",
+        "debit": "Debit",
+        "trans_date": "Trans Date",
+        "ref_number": "Ref Number",
+        "date_authorized": "Date Authorized",
+        "no_transactions_found": "No Transactions Found",
+        "go_back": "Go Back",
+        "intermediary": "Intermediary"
     },
     "gis": {},
     "lms": {
